--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,9 @@ archives:
     name_template: '{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}'
 before:
   hooks:
-    - make gen
+    - make provider
 builds:
-  - binary: pulumi-resource-xyz
+  - binary: pulumi-resource-runpod
     dir: provider
     env:
       - CGO_ENABLED=0
@@ -18,8 +18,8 @@ builds:
       - linux
     ldflags:
       # The line below MUST align with the module in current provider/go.mod
-      - -X github.com/your-org-name/pulumi-xyz/provider/Version={{.Tag }}
-    main: ./cmd/pulumi-resource-xyz/
+      - -X github.com/runpod/pulumi-runpod-native/provider/Version={{.Tag }}
+    main: ./cmd/pulumi-resource-runpod/
 changelog:
   skip: true
 release:
