--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "provider-xyz-native",
+	"name": "provider-runpod-native",
 	"devDependencies": {
 		"@types/node": "^14"
 	},
 	"dependencies": {
 		"typescript": "^4.0.0",
 		"@pulumi/pulumi": "^3.0.0",
-		"@pulumi/xyz": "0.0.1-alpha.1699945013+97b0e04c"
+		"@pulumi/runpod": "0.0.1-alpha.1700620360+fc797fb9.dirty"
 	}
 }
