feat: update token

--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -24,6 +24,8 @@ jobs:
       contents: read
       packages: read
       actions: read
+    env:
+      RUNPOD_TOKEN: ${{ secrets.RUNPOD_TOKEN }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -45,9 +47,9 @@ jobs:
         run: |
           set -ex
           make install
-      - name: PulumiConfig
-        id: config
-        run: pulumi config set --secret runpod:token ${{env.RUNPOD_DEV_TOKEN}}
+      # - name: PulumiConfig
+      #   id: config
+      #   run: pulumi config set --secret runpod:token ${{env.RUNPOD_DEV_TOKEN}}
       - name: PulumiUp
         id: up
         run: make up
