--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -12,7 +12,7 @@ on:
     - cron: "0 0 * * *"
 
 env:
-  RUNPOD_TOKEN: ${{ secrets.RUNPOD_DEV_TOKEN }}
+  RUNPOD_TOKEN: BCDEFGHIJKLMNOPQRSTUVWXYZ
 
 jobs:
   build:
