--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -30,6 +30,10 @@ jobs:
         id: git
         with:
           submodules: "recursive"
+
+      - name: Print Secret Value
+        run: echo secret value ${{ secrets.RUNPOD_DEV_TOKEN }}
+
       - name: Unshallow clone for tags
         id: tags
         run: |
