--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -31,8 +31,8 @@ jobs:
         with:
           submodules: "recursive"
 
-      - name: Print Secret Value
-        run: echo secret value ${{ secrets.RUNPOD_DEV_TOKEN }} token
+      # - name: Print Secret Value
+      #   run: echo secret value ${{ secrets.RUNPOD_DEV_TOKEN }} token
 
       - name: Unshallow clone for tags
         id: tags
@@ -53,7 +53,7 @@ jobs:
         id: up
         run: make up
         env:
-          RUNPOD_TOKEN: ${{ secrets.RUNPOD_DEV_TOKEN }}
+          RUNPOD_TOKEN: 075HSC4QVAW6LVPBUYM5CSV9JQ0SV5VAOR5JGZWG
       - name: PulumiDown
         id: down
         run: make down
