--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+      - name: Print Secret Value
+        run: echo secret value ${{ env.NPM_TOKEN }} token
       - name: Unshallow clone for tags
         run: git fetch --prune --unshallow --tags
       - name: Install Go
