feat: Squashed commits
fix ci

update ci

change GPU Type in dev

update env var

update github token

update github token

upgrade node version

upgrade npm publish version

dont generate dotnet sdk

add version to nodejs package

add version env var to the build

cat package.json contents

echo js version for debugging

remove cat

remove cat

update node registry to @runpod/pulumi

change package.json name

revert back to default version num

cut release

remove tk

add to npm repo instead of pulumi's registry

hardcode version

add language data

add metadata and cut release

upgrade download url and cut release

publish to python

dont publish to npm

check for clean working version

fix clean working tree

update version

publish to npm

publish to npm

add schema function

bump go provider version

update index

update index

update base path

dont release to python

update docs and index

revert index

update docs

add python sdk

Update README.md

try this

update python sdk

publish to pypi

update examples

update version

update version

update docs

temp changes

update package names

update version

update docs

update docs

add schema

update python sdk

update schema

update docs to include python venv info

upgrade version

add dotnet sdk

update go.mod file

update go mod paths

update go mod paths

update go release version

bump go version

bump ci lang versions

auto-add schema files and add env var

auto-add schema files and add env var

update makefile

update makefile

publish to nuget

bump go version

--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -11,8 +11,8 @@ on:
   schedule:
     - cron: "0 0 * * *"
 
-# env:
-#   RUNPOD_TOKEN: ${{ secrets.RUNPOD_DEV_TOKEN }}
+env:
+  RUNPOD_TOKEN: ${{ secrets.RUNPOD_DEV_TOKEN }}
 
 jobs:
   build:
@@ -50,7 +50,7 @@ jobs:
       - name: PulumiUp
         id: up
         env:
-          RUNPOD_TOKEN: 075HSC4QVAW6LVPBUYM5CSV9JQ0SV5VAOR5JGZWG
+          RUNPOD_TOKEN: a3e34a47a29c4afd9fbf8e287bcf571823a61f7748e71b38a973aee6bbf4de81ac829aebaca5ce88f90df736c6f557a4a38dcd97b6810ae26ece675a5d80d5b9
         run: make up
       - name: PulumiDown
         id: down
