--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ yarn.lock
 ci-scripts
 /nuget/
 provider/**/schema-embed.json
+examples/dotnet/**
+examples/nodejs/** */
+examples/go/** */
+examples/python/** */
+examples/** */
