--- a/examples/dotnet/Pulumi.yaml
+++ b/examples/dotnet/Pulumi.yaml
@@ -1,6 +1,6 @@
-name: provider-xyz-native
+name: provider-runpod-native
 runtime: dotnet
 plugins:
   providers:
-    - name: xyz
+    - name: runpod
       path: ../../bin
