--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,6 +1,16 @@
 {
-    "name": "@pulumi/runpod",
+    "name": "@runpod-infra/pulumi",
     "version": "${VERSION}",
+    "keywords": [
+        "pulumi",
+        "runpod",
+        "gpus",
+        "ml",
+        "ai"
+    ],
+    "homepage": "https://runpod.io",
+    "repository": "https://github.com/runpod/pulumi-runpod-native",
+    "license": "Apache-2.0",
     "scripts": {
         "build": "tsc"
     },
@@ -9,10 +19,11 @@
     },
     "devDependencies": {
         "@types/node": "^14",
-        "typescript": "^4.3.5"
+        "typescript": "^3.7.0"
     },
     "pulumi": {
         "resource": true,
-        "name": "runpod"
+        "name": "runpod",
+        "server": "github://api.github.com/runpod/pulumi-runpod-native"
     }
 }
