dont generate dotnet sdk

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,7 +135,7 @@ jobs:
         language:
           - nodejs
           - python
-          - dotnet
+          # - dotnet
           - go
         nodeversion:
           - 18.x
