--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -19,11 +19,11 @@
     },
     "devDependencies": {
         "@types/node": "^14",
-        "typescript": "^4.3.5"
+        "typescript": "^3.7.0"
     },
     "pulumi": {
         "resource": true,
         "name": "runpod",
-        "server": "github://github.com/runpod/pulumi-runpod-native"
+        "server": "github://api.github.com/runpod/pulumi-runpod-native"
     }
 }
