update package names

--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@pierre78181/runpod",
+    "name": "@runpod-infra/pulumi",
     "version": "${VERSION}",
     "keywords": [
         "pulumi",
