--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -6,6 +6,6 @@
 	"dependencies": {
 		"typescript": "^4.0.0",
 		"@pulumi/pulumi": "^3.0.0",
-		"@pierre78181/runpod": "0.9.1+dirty"
+		"@runpod-infra/pulumi": "0.9.30+dirty"
 	}
 }
