--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,7 @@ builds:
       - linux
     ldflags:
       # The line below MUST align with the module in current provider/go.mod
-      - -X github.com/runpod/pulumi-runpod-native/provider/Version={{.Tag }}
+      - -X github.com/runpod/pulumi-runpod-native/provider.Version={{.Tag }}
     main: ./cmd/pulumi-resource-runpod/
 changelog:
   skip: true
