--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - v*.*.*
+      - v*.*.*-rc
       - "!v*.*.*-**"
 env:
   PROVIDER: "runpod"
@@ -99,6 +100,8 @@ jobs:
           make build
       - name: Generate SDK
         run: make ${{ matrix.language }}_sdk
+        env:
+          PULUMI_PYTHON_VERSION: ${{ github.ref }}
       - name: Check worktree clean
         run: |
           git update-index -q --refresh
