--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 5
       # - name: Unshallow clone for tags
       #   run: git fetch --prune --unshallow --tags
       - name: Install Go
