scaffolding for serverless endpoints

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -15,9 +15,8 @@
     "files": [
         "config/index.ts",
         "config/vars.ts",
+        "endpoint.ts",
         "index.ts",
-        "networkStorage.ts",
-        "pod.ts",
         "provider.ts",
         "template.ts",
         "types/index.ts",
