--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,12 +70,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish_binary
     steps:
+      - name: print
+        run: echo ${{ github.ref_name }}
+      - name: Unshallow clone for tags
+        run: git fetch --prune --unshallow --tags
       - name: Checkout Repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # tag=v4.1.4
         with:
-          fetch-depth: 5
-      # - name: Unshallow clone for tags
-      #   run: git fetch --prune --unshallow --tags
+          fetch-depth: 1
       - name: Install Go
         uses: actions/setup-go@v5
         with:
@@ -141,8 +143,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        dotnetversion:
-          - 3.1.301
+        # dotnetversion:
+        #   - 3.1.301
         goversion:
           - 1.22.x
         language:
@@ -152,4 +154,4 @@ jobs:
         nodeversion:
           - 18.x
         pythonversion:
-          - "3.9"
+          - "3.12"
