--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,10 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-      - name: Unshallow clone for tags
-        run: git fetch --prune --unshallow --tags
+        with:
+          fetch-depth: 1
+      # - name: Unshallow clone for tags
+      #   run: git fetch --prune --unshallow --tags
       - name: Install Go
         uses: actions/setup-go@v5
         with:
@@ -72,12 +74,12 @@ jobs:
     steps:
       - name: print
         run: echo ${{ github.ref_name }}
-      - name: Unshallow clone for tags
-        run: git fetch --prune --unshallow --tags
       - name: Checkout Repo
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # tag=v4.1.4
         with:
-          fetch-depth: 1
+          fetch-depth: 2
+      # - name: Unshallow clone for tags
+      #   run: git fetch --prune --unshallow --tags
       - name: Install Go
         uses: actions/setup-go@v5
         with:
