--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,6 +107,15 @@ jobs:
         run: VERSION=${{ github.ref_name }} make ${{ matrix.language }}_sdk
         env:
           PULUMI_PYTHON_VERSION: ${{ github.ref_name }}
+      - name: Set up Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Release: ${{ github.ref_name }}"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Check worktree clean
         run: |
           git update-index -q --refresh
