--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,8 +109,9 @@ jobs:
           PULUMI_PYTHON_VERSION: ${{ github.ref_name }}
       - name: Set up Git
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git checkout main
           git add .
           git commit -m "Release: ${{ github.ref_name }}"
