--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,6 @@ jobs:
   publish_sdk:
     name: Publish SDKs
     runs-on: ubuntu-latest
-    needs: publish_binary
     steps:
       - name: print
         run: echo ${{ github.ref_name }}
@@ -134,6 +133,11 @@ jobs:
         with:
           name: ${{ matrix.language  }}-sdk.tar.gz
           path: ${{ github.workspace}}/sdk/${{ matrix.language }}.tar.gz
+      - name: Print directories
+        run: |
+          ls -la ${{github.workspace}}/sdk/python/bin/dist
+          ls -la ${{github.workspace}}/sdk/python/bin
+          sudo chown -R $USER:$USER ${{github.workspace}}/sdk/python/bin/dist
       - if: ${{ matrix.language == 'python' && env.PUBLISH_PYPI == 'true' }}
         name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
