--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,9 +135,9 @@ jobs:
           path: ${{ github.workspace}}/sdk/${{ matrix.language }}.tar.gz
       - name: Print directories
         run: |
-          ls -la ${{github.workspace}}/sdk/python/bin/dist
-          ls -la ${{github.workspace}}/sdk/python/bin
-          sudo chown -R $USER:$USER ${{github.workspace}}/sdk/python/bin/dist
+          apt-get update
+          apt-get install tree
+          tree ${{github.workspace}}/sdk/python
       - if: ${{ matrix.language == 'python' && env.PUBLISH_PYPI == 'true' }}
         name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
