--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,9 +135,10 @@ jobs:
           path: ${{ github.workspace}}/sdk/${{ matrix.language }}.tar.gz
       - name: Print directories
         run: |
-          apt-get update
-          apt-get install tree
+          sudo apt-get update
+          sudo apt-get install tree
           tree ${{github.workspace}}/sdk/python
+          chown -R $USER:$USER ${{github.workspace}}/sdk/python
       - if: ${{ matrix.language == 'python' && env.PUBLISH_PYPI == 'true' }}
         name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
