--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -5,58 +5,74 @@ plugins:
     - name: runpod
       path: ../../bin
 
-# config:
-#   runpod:token: "runpod api token"
-
 resources:
   testNetworkStorage:
     type: runpod:NetworkStorage
     properties:
-      name: "testStorage1"
+      name: testStorage1
       size: 5
-      dataCenterId: "EU-RO-1"
+      dataCenterId: EU-RO-1
 
-  # myRandomPod:
-  #   type: runpod:Pod
-  #   properties:
-  #     cloudType: ALL
-  #     networkVolumeId: ${testNetworkStorage.networkStorage.id}
-  #     gpuCount: 1
-  #     volumeInGb: 50
-  #     containerDiskInGb: 50
-  #     minVcpuCount: 2
-  #     minMemoryInGb: 15
-  #     gpuTypeId: "NVIDIA GeForce RTX 4090"
-  #     name: "RunPod Pytorch"
-  #     imageName: "runpod/pytorch"
-  #     dockerArgs: ""
-  #     ports: "8888/http"
-  #     volumeMountPath: "/workspace"
-  #     env: [{ key: "JUPYTER_PASSWORD", value: "rns1hunbsstltcpad22d" }]
+  myRandomPod:
+    type: runpod:Pod
+    properties:
+      cloudType: ALL
+      networkVolumeId: ${testNetworkStorage.networkStorage.id}
+      gpuCount: 1
+      volumeInGb: 60
+      containerDiskInGb: 50
+      minVcpuCount: 2
+      minMemoryInGb: 15
+      gpuTypeId: "NVIDIA GeForce RTX 4090"
+      name: "RunPod Pytorch"
+      imageName: "runpod/pytorch"
+      dockerArgs: ""
+      ports: "8888/http"
+      volumeMountPath: "/workspace"
+      env:
+        - key: "JUPYTER_PASSWORD"
+          value: "rns1hunbsstltcpad22d"
 
-  # myRandomTemplate:
-  #   type: runpod:Template
-  #   properties:
-  #     containerDiskInGb: 20
-  #     containerRegistryAuthId: ""
-  #     dockerArgs: "python3 -m http.server 8080"
-  #     env: [{ key: "JUPYTER_PASSWORD", value: "rns1hunbsstltcpad22d" }]
-  #     imageName: "nginx:latest"
-  #     isPublic: false
-  #     isServerless: false
-  #     name: "RunPod Nginx"
-  #     ports: "8080/http"
-  #     readme: "Test template"
-  #     startJupyter: false
-  #     startSsh: false
-  #     volumeInGb: 10
-  #     volumeMountPath: "/workspace"
-  #     category: "NVIDIA"
+  myRandomTemplate:
+    type: runpod:Template
+    properties:
+      containerDiskInGb: 20
+      containerRegistryAuthId: ""
+      dockerArgs: "python3 -m http.server 8080"
+      env: [{ key: "JUPYTER_PASSWORD", value: "rns1hunbsstltcpad22d" }]
+      imageName: "nginx:latest"
+      isPublic: false
+      isServerless: true
+      name: "RunPod Nginx"
+      ports: "8080/http"
+      readme: "Test template"
+      startJupyter: false
+      startSsh: false
+      volumeInGb: 10
+      volumeMountPath: "/workspace"
+
+  myRandomEndpoint:
+    type: runpod:Endpoint
+    properties:
+      gpuIds: "AMPERE_16,AMPERE_24,-NVIDIA L4"
+      idleTimeout: 100
+      locations: "CA-MTL-2,CA-MTL-3,EU-RO-1,US-CA-1,US-GA-1,US-KS-2,US-OR-1,CA-MTL-1,US-TX-3,EUR-IS-1,EUR-IS-2,SEA-SG-1"
+      name: "myRandomEndpoint"
+      networkVolumeId: ${testNetworkStorage.networkStorage.id}
+      scalerType: "REQUEST_COUNT"
+      scalerValue: 2
+      templateId: ${myRandomTemplate.template.id}
+      workersMax: 2
+      workersMin: 1
 
 outputs:
-  # pod:
-  #   value: ${myRandomPod.pod}
+  pod:
+    value: ${myRandomPod.pod}
   networkStorage:
     value: ${testNetworkStorage.networkStorage}
+  template:
+    value: ${myRandomTemplate.template}
+  endpoint:
+    value: ${myRandomEndpoint.endpoint}
 
 
